# arsync

./: .clippy.toml  .coderabbit.yaml  .gitignore  .pr_description.md  .review_analysis.md  CI_OPTIMIZATION_ANALYSIS.md  CODEBASE_ANALYSIS.md  Cargo.toml  Makefile.toml  PARALLEL_COPY_BENCHMARK_RESULTS.md  PARALLEL_COPY_IMPLEMENTATION_SUMMARY.md  PR_DESCRIPTION.md  PR_MESSAGE.md  PR_SUMMARY.md  RAID_SATURATION_TEST_APPROACH.md  README.md  REFACTORING_SUMMARY.md  REMAINING_IMPROVEMENTS.md  STATUS.md  clippy.toml  crates.js  create_pr.sh  help.html  optimize-ci.sh  pr_description.md  search-index.js  settings.html  src-files.js  test-feature-a.txt  test-feature-b.txt  v6_gallery.html
.config/: nextest.toml
.cursor/commands/: README.md  branch.md  coderabbit-review.md  design-doc.md  design.md  implement.md  implementation-plan.md  plan.md  pr-checks.md  review-comments.md
.github/scripts/: check-pr-base-branch.js
.github/workflows/: ci-optimized.yml  ci.yml  pr-base-check.yml  release.yml  syscall-analysis.yml
arsync/: all.html  index.html  macro.t.html  sidebar-items.js  struct.Semaphore.html
arsync/adaptive_concurrency/: fn.check_fd_limits.html  fn.is_emfile_error.html  index.html  sidebar-items.js  struct.AdaptiveConcurrencyController.html  struct.ConcurrencyOptions.html  struct.ConcurrencyStats.html  type.SharedSemaphore.html
arsync/cli/: enum.CopyMethod.html  index.html  sidebar-items.js  struct.Args.html  struct.ConcurrencyConfig.html  struct.IoConfig.html  struct.OutputConfig.html  struct.ParallelCopyConfig.html  struct.PathConfig.html
arsync/copy/: constant.BUFFER_SIZE.html  constant.HUGE_PAGE_SIZE.html  fn.align_to_page.html  fn.copy_file.html  fn.copy_file_internal.html  fn.copy_read_write.html  fn.copy_read_write_parallel.html  fn.copy_region_sequential.html  index.html  sidebar-items.js  static.DISPATCHER.html
arsync/copy_trait/: constant.COPY_BUFFER_SIZE.html  fn.copy_file_with_trait.html  index.html  sidebar-items.js
arsync/directory/: fn.copy_directory.html  fn.copy_symlink.html  fn.handle_existing_hardlink.html  fn.metadata_from_path.html  fn.preserve_directory_metadata.html  fn.preserve_directory_metadata_fd.html  fn.preserve_directory_xattr.html  fn.preserve_file_metadata.html  fn.process_directory_entry_with_compio.html  fn.process_file.html  fn.process_symlink.html  fn.traverse_and_copy_directory_iterative.html  index.html  sidebar-items.js  struct.DirectoryStats.html  struct.ExtendedMetadata.html  struct.FileLocation.html  struct.TraversalContext.html
arsync/error/: enum.SyncError.html  index.html  sidebar-items.js  type.Result.html
arsync/file_wrapper/: index.html  sidebar-items.js  struct.AsyncFileWrapper.html
arsync/hardlink_tracker/: index.html  sidebar-items.js  struct.FilesystemStats.html  struct.FilesystemTracker.html  struct.HardlinkInfo.html  struct.InodeInfo.html
arsync/i18n/: constant.EN_US.html  constant.EN_X_PIRATE.html  enum.I18nError.html  enum.Language.html  enum.TranslationKey.html  fn.create_bundle.html  fn.get_ftl_for_locale.html  fn.get_language.html  fn.set_language.html  index.html  sidebar-items.js  static.CURRENT_LOCALE.html  static.EN_US_FTL.html  static.X_PIRATE_FTL.html
arsync/io_uring/: enum.CopyStatus.html  index.html  sidebar-items.js  struct.CopyOperation.html  struct.FileMetadata.html  struct.FileOperations.html
arsync/metadata/: fn.get_precise_timestamps.html  fn.preserve_file_metadata.html  fn.preserve_ownership_from_fd.html  fn.preserve_permissions_from_fd.html  fn.preserve_timestamps_from_fd.html  fn.preserve_xattr_from_fd.html  index.html  sidebar-items.js  struct.MetadataConfig.html
benchmarks/: Cargo.toml  README.md  README_ZERO_COPY.md  count_io_uring_ops_simple.sh  create_large_dataset.sh  fio_raid_baseline.sh  run_benchmarks.sh  run_benchmarks_quick.sh  run_large_benchmark.sh  syscall_analysis.sh  trace_from_getdents.sh  trace_io_uring_ops.bt  zero_copy_bench.sh
benchmarks/src/: main.rs
crates/compio-fs-extended/: Cargo.toml  DESIGN.md  STATUS.md  SYMLINK_METADATA.md
crates/compio-fs-extended/docs/: cheap_calls_sync.md
crates/compio-fs-extended/src/: copy.rs  device.rs  directory.rs  error.rs  extended_file.rs  fadvise.rs  fallocate.rs  hardlink.rs  lib.rs  metadata.rs  ownership.rs  symlink.rs  write_managed.rs  xattr.rs
crates/compio-fs-extended/tests/: directoryfd_symlink_tests.rs  integration_tests.rs  simple_integration_tests.rs  xattr_symlink_tests.rs
docs/: ARCHITECTURE_PLATFORM_ABSTRACTION.md  DEVELOPER.md  LARGE_SCALE_BENCHMARK_PLAN.md  LOGICAL_SYSCALL_ANALYSIS.md  MACOS_COMPATIBILITY_PLAN.md  MACOS_QUICK_REFERENCE.md  MACOS_SUPPORT_PLAN.md  NEXTEST_SETUP.md  PARALLEL_COPY_BENCHMARK_RESULTS.md  PARALLEL_COPY_DESIGN.md  PARALLEL_COPY_IMPLEMENTATION_SUMMARY.md  RAID_ARRAY_TEST_PLAN.md  RAID_SATURATION_TEST_APPROACH.md  README.md  RSYNC_CONFLICT_BEHAVIOR.md  SYSCALL_BREAKDOWN_PHASE2.md  TESTCONTAINERS.md  TRAIT_INTEGRATION.md
examples/: trait_integration_example.rs
scripts/: reorganize.sh
src/: adaptive_concurrency.rs  buffer_pool.rs  cli.rs  copy.rs  copy_trait.rs  directory.rs  error.rs  file_wrapper.rs  hardlink_tracker.rs  i18n.rs  io_uring.rs  lib.rs  main.rs  metadata.rs  stats.rs  sync.rs
src/gui/: app.rs  (+2 more)
tests/: QUICK_REFERENCE.md  README.md  TEST_TAGS.md  atomic_stats_test.rs  comprehensive_metadata_tests.rs  directory_metadata_tests.rs  directory_resync_tests.rs  edge_case_metadata_tests.rs  file_xattr_tests.rs  handshake_pipe_tests.rs  handshake_unit_tests.rs  metadata_flag_tests.rs  parallel_copy_tests.rs  performance_metadata_tests.rs  permission_test.rs  protocol_pipe_tests.rs  readme_structure_test.rs  rsync_checksum_tests.rs  rsync_compat.rs  rsync_delta_token_tests.rs  rsync_end_to_end_test.rs  rsync_file_list_compat_test.rs  rsync_file_list_integration_test.rs  rsync_format_unit_tests.rs  rsync_handshake_integration_test.rs  rsync_integration_tests.rs  symlink_edge_cases_test.rs  symlink_metadata_tests.rs  symlink_ownership_privileged_test.rs  trait_directory_integration.rs  trait_integration_test.rs  trait_metadata_integration.rs  zero_copy_tests.rs
(+346 files in other folders)
